Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-May-2012 Jean-Marie Simonet
 + [#28472] Add ability to copy a template. Thanks Mark

11-May-2012 Jean-Marie Simonet
 # [#27711] Plugin SEF don't support "poster" video attribute. Thanks Ryan
 # [#28481] Edit Menu Item: Modules appears multiple times in the list. Thanks Doesnt Matter.
 # [#28205] Remove 'Display: no' modules from Module Assignment list (1.7), or button to hide them. Thanks Jason Williams and Andrea. 
 # [#28514] duplicate line in user.php. Thanks Viet Vu
 # [#28421] Update PHPMailer to 5.2.1. Thanks Rouven.
 # [#28505] *Multilang validation errors when SEF is off
 # [#28479] Use most specific paths possible. Fix detect FTP root. Thanks Rouven.

30-Apr-2012 Jean-Marie Simonet
 # Correcting hathor xml
 # [#28453] Language override doesn't handle double quotes properly. Thanks Johannes.
 # [#28455] *303 when not using URL Language code in multilanguage. Thanks Yannick.
 # [#28467] *configuration.php smtp saves auto-filled admin username and password.
 # [#28436] Wrong group in ldap and joomla authentication-plugin XML-file

28-Apr-2012 Jean-Marie Simonet
 $ Correcting wrong ini string value
 $ Updating zh-CN installation ini file
 # [#28398] Missing "remember me" in com_users. Thanks Nils.
 # [#28210] onchange event does not fire at JFormFieldMedia (Regression). Thanks Benjamin.
 # [#28428] Backend uses incorrect cache path for system caches - text filters can be reseted to defaults with enabled caching. Thanks Dennis.
 # [#28457] *Unused $offset_user parameter in configuration
 # [#28440] *load language file from com_media front end

20-Apr-2012 Jean-Marie Simonet
 # [#28407] *Browser Settings for new visitors broken in multilanguage. Reverting #28151

18-Apr-2012 Jean-Marie Simonet