@@ -1,0 +1,229 @@
+; Joomla1 eo-XX
+; Joomla! Project
+; Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="Paŝoj"
+INSTL_STEP_1_LABEL="1 : Lingvo"
+INSTL_STEP_2_LABEL="2 : Antaŭ-instala kontrolo"
+INSTL_STEP_3_LABEL="3 : Permesilo"
+INSTL_STEP_4_LABEL="4 : Datumbaso"
+INSTL_STEP_5_LABEL="5 : FTP-agordo"
+INSTL_STEP_6_LABEL="6 : Agordo"
+INSTL_STEP_7_LABEL="7 : Fini"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Elekti lingvon"
+INSTL_SELECT_LANGUAGE_DESC="Bonvolu elekti la lingvon kiun vi volas uzi dum la Joomla! instalado."
+INSTL_SELECT_LANGUAGE_TITLE="Elekti lingvon"
+INSTL_WARNJAVASCRIPT="Averto! JavaScript devas esti ŝaltita por korekta instalo de Joomla!"
+INSTL_WARNJSON="Por ebli instali Joomla! via PHP instalo devas havi JSON ŝaltita!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Antaŭ-instala kontrolo"
+INSTL_PRECHECK_FOR_VERSION="Antaŭ-instala kontrolo por %s:"
+INSTL_PRECHECK_DESC="Se iu el la jenaj eroj ne estas subtenata (indikata per <strong class="_QQ_"red"_QQ_">Ne</strong>) bonvolu korekti ĝin. Alie la instalo de Joomla! eble ne funkcias."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Rekomenditaj agordoj:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Tiuj agordoj estas rekomenditaj por PHP por sekuri plenan kongruon kun Joomla.<br />Tamen, Joomla! daŭre funkcios kvankam la agordoj ne entute kongruas."
+INSTL_PRECHECK_DIRECTIVE="Direktivo"
+INSTL_PRECHECK_RECOMMENDED="Rekomendita"
+INSTL_PRECHECK_ACTUAL="Efektiva"
+
+; Database view
+INSTL_DATABASE="Agordo de datumbazo"
+INSTL_DATABASE_HOST_DESC="Normale estas &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Gastignomo"
+INSTL_DATABASE_NAME_DESC="Kelkaj gastigaj serviloj nur permesas unu specifan DB nomon po retejo. Uzu tabelan prefikson por distingi la Joomla! paĝaro."
+INSTL_DATABASE_NAME_LABEL="Nomo de datumbazo"
+INSTL_DATABASE_NO_SCHEMA="Neniu datumbaza skemo ekzistas por tiu ĉi datumbaza tipo."
+INSTL_DATABASE_OLD_PROCESS_DESC="Ĉiuj datumoj en la ekzistantaj savkopioj de la tabeloj de la antaŭa Joomla! instalo estos anstataŭigata."
+INSTL_DATABASE_OLD_PROCESS_LABEL="Malnova datumbasa procezo"
+INSTL_DATABASE_PASSWORD_DESC="Estas devige uzi pasvorton por la mysql konto pro sekuro"
+INSTL_DATABASE_PASSWORD_LABEL="Pasvorto"
+INSTL_DATABASE_PREFIX_DESC="Elektu tabelan prefikson aŭ uzu la <b>hazarde kreitan</b>. La prefikso estu proksimume je tri aŭ kvar signoj longa, nur liter-ciferaj signoj, kaj devas fini per substreko. <b>Certigu ke la elektata prefikso ne estas uzata en alia tabelo.</b>."
+INSTL_DATABASE_PREFIX_LABEL="Tabela prefikso"
+INSTL_DATABASE_PREFIX_MSG="La tabela prefikso devas komenci per litero, sekvata de iuj liter-ciferaj signoj kaj substreko"
+INSTL_DATABASE_TYPE_DESC="Tio verŝajne estas &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Tipo de datumbazo"
+INSTL_DATABASE_USER_DESC="Simile al "_QQ_"root"_QQ_" aŭ salutnomo de la gastiganto"
+INSTL_DATABASE_USER_LABEL="Salutnomo"
+INSTL_DATABASE_TITLE="Konekta agordo"
+INSTL_DATABASE_DESC="<p> Joomla! paĝaro enmemorigas ĉiujn siajn datumojn en datumbaso. Tiu ĉi vido donas al la instala programo la necesajn informojn por krei la datumbason.</p><p> Se vi instalas Joomla! en fora servilo, vi devas ricevi tiujn detalojn de via gastiganto.</p><p>Kelkaj gastigantoj postulas ke vi kreu la datumbason antaŭ ol la instalo de Joomla!. Se vi ricevas la mesaĝon "_QQ_"Could not connect to the database"_QQ_", kontrolu ke via salutnomo kaj pasvorto estas korektaj. Se vi daŭre ricevas tiun ĉi mesaĝon, kontaktu vian gastiganton por ekscii ĉu vi devas krei datumbason antaŭ ol instali Joomla.</p>" 
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Aŭtomate trovi FTP-vojon"
+INSTL_FTP="FTP-agordo"
+INSTL_FTP_DESC="<p>Al kelkaj serviloj vi eble devas doni FTP-ensalutiloj por kompletigi la instalon. Se vi havas problemojn kompletigi la instalon sen tiuj ĉi ensalutiloj, kontaktu vian gastiganton por decidi ĉu ili necesas. </p><p>Pro sekuraj kialoj, estas plej bone krei apartan FTP-uzantkonton kun aliro nur al la Joomla! instalo, kaj ne al la tuta servilo. Via gastiganto povas helpi pri tio.</p><p><b>Notu:</b> Se vi instalas en Vindoza operaciumon, la FTP tavolo <strong>ne</strong> necesas.</p>"
+INSTL_FTP_ENABLE_LABEL="Ŝalti la FTP-tavolon"
+INSTL_FTP_HOST_LABEL="FTP-gastigo"
+INSTL_FTP_PASSWORD_LABEL="FTP-pasvorto"
+INSTL_FTP_PORT_LABEL="FTP-pordo"
+INSTL_FTP_ROOT_LABEL="FTP-radika vojo"
+INSTL_FTP_SAVE_LABEL="Konservi FTP-pasvorton"
+INSTL_FTP_TITLE="FTP-agordo (<strong class="_QQ_"red"_QQ_">Malnepra - nur malmultaj uzantoj bezonas plenigi tiujn ĉi detalojn - klaku Sekva por pluiri</strong>)"
+INSTL_FTP_USER_LABEL="FTP-salutnomo"
+INSTL_SITE_NAME_LABEL="Nomo de retejo"
+INSTL_VERIFY_FTP_SETTINGS="Certigi FTP-agordon"
+INSTL_FTP_SETTINGS_CORRECT="Agordoj korektaj"
+INSTL_FTP_USER_DESC="Averto! Ni rekomendas ke vi lasas tiun ĉi kampon malplena, kaj uzos vian FTP-salutnomon ĉiam kiam vi transdonas dosierojn."
+INSTL_FTP_PASSWORD_DESC="Averto! Ni rekomendas ke vi lasas tiun ĉi kampon malplena, kaj uzos vian FTP-pasvorton ĉiam kiam vi transdonas dosierojn."
+
+;Site View
+INSTL_SITE="Ĉefa agordo"
+INSTL_ADMIN_EMAIL_LABEL="Via retpoŝto"
+INSTL_ADMIN_PASSWORD_LABEL="Pasvorto de administranto"
+INSTL_ADMIN_PASSWORD2_LABEL="Kontrolu pasvorton de administranto"
+INSTL_ADMIN_USER_LABEL="Salutvorto de administranto"
+INSTL_SITE_NAME_TITLE="Nomo de retejo"
+INSTL_SITE_META_ADVANCED_SETTINGS="Altnivelaj agordoj - malnepraj"
+INSTL_SITE_NAME_DESC="Entajpi la nomon de via Joomla! paĝaro.<br />Malnepra:<br /> Vi ankaŭ povas entajpi Meta-priskribon kaj Meta-ŝlosilvortojn en via paĝaro.<br /> Vi ankaŭ povas decidi ĉu la retejo estu atingebla aŭ ne tuj post la instalo."
+INSTL_SITE_METADESC_LABEL="Meta-priskribo"
+INSTL_SITE_METADESC_TITLE_LABEL="Entajpu priskribo de la tuta paĝaro uzota de serĉiloj. Generale, maksimume 20 ŝlosilvortoj estas sufiĉe."
+INSTL_SITE_METAKEYS_LABEL="Meta-ŝlosilvortoj"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Entajpu la ŝlosilvortojn kaj frazojn kiuj plej bone priskribas vian paĝaron. Apartigu ŝlosilvortojn kaj frazojn per komo."
+INSTL_SITE_CONF_TITLE="Konfirmu la retpoŝton kaj pasvorton de la administranto."
+INSTL_SITE_CONF_DESC="Entajpu vian retpoŝtan adreson. Tio estos la retpoŝto de la ĉef-administranto de la paĝaro.<br />Entajpu novan pasvorton kaj konfirmu ĝin en la ĝustaj kampoj. Vi povas ŝanĝi la defaŭltan salutnomon <strong>admin</strong>. Tiuj estos la ensalutnomo kaj pasvorto kiujn vi uzos por ensaluti la administran stirpanelon fine de la instalado.<br /> Se vi migras, vi povas ignori ĉi-sekcion. Viaj nunaj agordoj estos aŭtomate migrataj."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Instali la defaŭltajn ekzemplajn datumojn (anglalingvaj)"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Grave!</strong>: Ni forte rekomendas al novuloj instali la defaŭltajn ekzemplajn datumojn. Por fari tion, elektu tiun ĉi opcion, kaj alklaku la butonon <i>antaŭ</i> ol vi iru al la sekva fazo."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Ekzemplaj datumoj:</strong> Antaŭ ol vi finas la instaladon, vi povas plenigi la datumbazon per datumoj. Estas farebla en du manieroj:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Defaŭltaj ekzemplaj datumoj</strong> povas esti enmetitaj. Por fari tion, certigu ke la Default English (GB) Sample Data estas montrata en la rapid-aldona menuo kaj alklaku la 'Instali ekzemplajn datumojn' butonon."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Propraj ekzemplaj datumoj</strong> povas esti enmetitaj. Por fari tion, elektu viaj propraj ekzemplaj datumoj en la rapid-aldona menuon kaj alklaku la 'Instali ekzemplajn datumojn' butonon."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Sen-enhava instalo</strong>: Se vi ne volas enhavon, entajpu la nomon de la paĝaro, retpoŝto al la administranto kaj elektu pasvorton. Post tio pluiru al la fina paŝo klakante <em>Sekva</em>."
+INSTL_SITE_OFFLINE_LABEL="Retejo senkontekta"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Lasu la retejon malkonektita kiam la instalado estas preta. La retejo povas esti konektita poste en la Mallokaj agordoj."
+INSTL_SITE_SAMPLE_LABEL="Ekzempla datumaro"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Instali ekzemplajn datumojn"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Ni forte rekomendas al novuloj instali la defaŭltajn ekzemplajn datumojn. La programo mem instalas ekzemplan enhavon kiu troviĝas en la Joomla! instala pakaĵo."
+INSTL_SITE_SAMPLE_LOADED="La ekzemplaj datumoj estis sukcese instalitaj!"
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
+INSTL_SAMPLE_BLOG_SET="Blog English (GB) Sample Data"
+INSTL_SAMPLE_BROCHURE_SET="Brochure English (GB) Sample Data"
+
+;Complete view
+INSTL_COMPLETE="Fini"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Detaloj de administra ensalutado"
+INSTL_COMPLETE_DESC1="Alklaku la Fasadan butonon por vidi vian novan Joomla! retejon aŭ alklaku la Admin-butonon por iri al la administra ensalutejo."
+INSTL_COMPLETE_DESC2="En la Joomla! Community Site vi trovos liston de ligoj al elekteblaj lingvopakaĵoj, kaj ankaŭ ligoj al lingvo-rilataj resurcoj en la joomla.org paĝara grupo."
+INSTL_COMPLETE_DESC3="Alklaku la dekstran butonon por malfermi la paĝon Community Site en nova fenestro."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="La instala dosierujo jam estas forigita."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="La instala dosierujo ne povis esti forigata. Bonvolu forigi ĝin permane."
+INSTL_COMPLETE_FOLDER_REMOVED="La instala dosierujo sukcese forigita"
+INSTL_COMPLETE_LANGUAGE_1="Ĉu Joomla! estas en via lingvo?"
+INSTL_COMPLETE_LANGUAGE_2="Vizitu la Joomla! Community Site por alŝuti lingvopakaĵojn."
+INSTL_COMPLETE_REMOVE_FOLDER="Forigu la instalan dosierujon"
+INSTL_COMPLETE_REMOVE_INSTALLATION="NEPRE FORIGU LA TUTAN<br />INSTALAN DOSIERUJON.<br />Vi ne povas daŭrigi antaŭ ol la instala dosierujo estas forigita el la dosierejo de la retejo. Tio estas sekura trajto de Joomla!."
+INSTL_COMPLETE_TITLE="Gratulon! Joomla! estas instalita."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Ne eblas konekti al datumbazo. Konektilo liveris: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Ne eblis aktualigi manifesta kaŝdosierujo de aldono: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Okazis eraroj dum la kreo de datumbaza sekurkopio."
+INSTL_DATABASE_ERROR_CREATE="Eraro okazis kum la kreo de la datumbazo %s.<br/>Eble la uzanto ne havas permeson krei datumbazon. Datumbazo estas necesa kaj eble devas esti kreita aparte antaŭ ol vi povas instali Joomla!"
+INSTL_DATABASE_ERROR_DELETE="Eraroj okazis dum la forigo de la datumbazo"
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Eraro dum kreado de versia nombro de skemo"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Forpreni"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Sekurkopio"
+INSTL_DATABASE_FIX_TOO_LONG="La MySQL-tabela prefikso enhavu 15 signojn maksimume"
+INSTL_DATABASE_INVALID_DB_DETAILS="La donitaj detaloj pri la datumbazo aŭ estas neĝustaj kaj/aŭ estas malplenaj."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Vi bezonas MySQL 5.0.4 aŭ pli alta por daŭrigi la instaladon. Via versio estas: %s"
+INSTL_DATABASE_INVALID_TYPE="Bonvolu elekti la datumbasa tipo"
+INSTL_DATABASE_NAME_TOO_LONG="La MySQL-datumbaza nomo enhavu 64 signojn maksimume"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="La tabela prefikso por MySQL devas komenci per litero, kaj povas esti sekvata per liter-ciferaj signoj aŭ substrekoj"
+INSTL_DATABASE_INVALID_NAME="MySQL-versioj pli fruaj ol 5.1.6 devas ne havi punktojn aŭ aliajn "_QQ_"special"_QQ_" signojn en la nomo. Via versio estas: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL datumbasaj nomoj ne povas komenci aŭ fini per spaceto."
+INSTL_DATABASE_NAME_INVALID_CHAR="Neniu MySQL identigilo povas enhavi NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="La dosiero %s ne ekzistas"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Ŝajnas ke kuketoj estas malebligitaj en via retumilo. Vi ne povas instali ĝis vi ebligas kuketojn."
+INSTL_HEADER_ERROR="Eraro"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! instalilo rete"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Ne povas konekti al datumbazo. Konektilo liveris: %s"
+INSTL_STD_OFFLINE_MSG="Bedaŭrinde vi ne povas uzi tiun ĉi retejon ĝuste nun. Ni prizorgas ĝin momente.<br /><br/> Bonvolu viziti nin denove post iom da tempo."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="La difinita FTP-dosierejo ne estas la dosierejo de ĉi tiu Joomla! instalado"
+INSTL_FTP_NOCONNECT="Ne povas konekti al la FTP-servilo"
+INSTL_FTP_NODELE="La funkcio "_QQ_"DELE"_QQ_" malsukcesis."
+INSTL_FTP_NODIRECTORYLISTING="Ne povis akiri dosierejan liston de la FTP-servilo"
+INSTL_FTP_NOLIST="La funkcio "_QQ_"LIST"_QQ_" malsukcesis."
+INSTL_FTP_NOLOGIN="Ne povis ensaluti la FTP-servilon."
+INSTL_FTP_NOMKD="La funkcio "_QQ_"MKD"_QQ_" malsukcesis."
+INSTL_FTP_NONLST="La funkcio "_QQ_"NLST"_QQ_" malsukcesis."
+INSTL_FTP_NOPWD="La funkcio "_QQ_"PWD"_QQ_" malsukcesis."
+INSTL_FTP_NORETR="La funkcio "_QQ_"RETR"_QQ_" malsukcesis."
+INSTL_FTP_NORMD="La funkcio "_QQ_"RMD"_QQ_" malsukcesis."
+INSTL_FTP_NOROOT="Ne povas atingi la difinitan FTP-dosierujejon"
+INSTL_FTP_NOSTOR="La funkcio "_QQ_"STOR"_QQ_" malsukcesis."
+INSTL_FTP_NOSYST="La funkcio "_QQ_"SYST"_QQ_" malsukcesis."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Ne povas aŭtomate trovi la radikan FTP-dosierejon"
+
+;others
+INSTL_ADVANCED_SETTINGS="Altnivelaj agordoj"
+INSTL_BASIC_SETTINGS="Baza agordo"
+INSTL_CONFPROBLEM="Via agorda dosiero aŭ dosierujo estas neskribebla aŭ okazis problemo dum la kreo de la agorda dosiero. Vi devos alŝuti la jenan kodon permane. Marku la tutan kodon en la kampo, kopiu kaj algluu ĝin al nova dosiero. Nomu la novan dosieron <em>configuration.php</em> kaj alŝutu ĝin al la radika dosierejo de via retejo."
+INSTL_DATABASE_SUPPORT="Datumbasa subteno:"
+INSTL_DISPLAY_ERRORS="Montri erarojn"
+INSTL_ERROR_DB="Kelkaj eraroj okazis dum la plenigo de la datumbaso: %s"
+INSTL_FILE_UPLOADS="Dosieraj alŝutoj"
+INSTL_GNU_GPL_LICENSE="GNU Ĝenerala publika permesilo"
+INSTL_INSTALLATION="Instalado"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON subteno"
+INSTL_LICENSE="Permesilo"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC"
+INSTL_MAGIC_QUOTES_RUNTIME="Procezilo por Magic Quote"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB-lingvo estas la defaŭlto"
+INSTL_MB_STRING_OVERLOAD_OFF="MB-ĉena superŝarĝo estas malebligita"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP-mbstring lingvo-agordo ne esta neŭtrala (Unikodo). Vi povas ĝustigi tion: tajpu <strong>php_value mbstring.language neutral</strong> en la loka dosiero <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP-mbstring funkcio superŝarĝo estas ebligita. Vi povas ĝustigi tion: tajpu <strong>php_value mbstring.func_overload 0</strong> en la loka dosiero <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Vi tamen povas daŭrigi la instalon ĉar la agordoj estos montrataj ĉe la fino. Vi devas alŝuti la kodon permane. Marku la tutan kodon en la kampo, kopiu kaj algluu ĝin al nova dosiero. Nomu la novan dosieron <em>configuration.php</em> kaj alŝutu ĝin al la radika dosierejo de via retejo."
+INSTL_OUTPUT_BUFFERING="eliga bufrado"
+INSTL_PARSE_INI_FILE_AVAILABLE="Sintaksa analizilo por INI-dosiero subtenata"
+INSTL_PHP_VERSION="PHP-versio"
+INSTL_REGISTER_GLOBALS="Registri mallokajn variablojn (Register_globals)"
+INSTL_SAFE_MODE="Sekura reĝimo (Safe_Mode)"
+INSTL_SESSION_AUTO_START="Aŭtomata lanĉo de seanco (Session Auto Start)"
+INSTL_WRITABLE="skribebla"
+INSTL_XML_SUPPORT="XML-subteno"
+INSTL_ZIP_SUPPORT_AVAILABLE="Indiĝena ZIP subteno"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib kunpremada subteno"
+INSTL_PROCESS_BUSY="Procezo progresas. Bonvolu atendi..."
+
+;Global strings
+JADMINISTRATOR="Administranto"
+JADVANCED="Altnivela"
+JCHECK_AGAIN="Kontroli denove"
+JERROR="Eraro"
+JGLOBAL_ISFREESOFTWARE="%s estas libera programaro eldonita sub la <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JINVALID_TOKEN="La plej lasta peto estis rifuzita pro nevalida sekuriga ĵetono. Bonvolu aktualigi la paĝon kaj provu denove."
+JNEXT="Sekva"
+JNO="Ne"
+JOFF="Malŝaltita"
+JON="Ŝaltita"
+JPREVIOUS="Antaŭa"
+JSITE="Retejo"
+JUSERNAME="Salutnomo"
+JYES="Jes"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Ne eblis konekti al MySQL."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Ne eble ŝarĝi la datumbasa pelilo (Database Driver): %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Via seanco finiĝis, bonvolu reŝarĝi la paĝon."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Kampo deviga: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Nevalida kampo: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Ne povis konekti al datumbaso <br />joomla.library: %1$s - %2$s"
+
+;Necessary for errors
+ADMIN_EMAIL="Via retpoŝto"
+ADMIN_PASSWORD="Pasvorto de administranto"
+ADMIN_PASSWORD2="Konfirmu pasvorton de administranto"
+SITE_NAME="Nomo de retejo"
